--- a/lab-website/_config.yml
+++ b/lab-website/_config.yml
@@ -1,5 +1,5 @@
-title: Moon Lab Website (DEMO)
-description: Moon Lab Website at WI.
+title: Sun Lab Website
+description: Sun Lab Website at WI.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
