--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Moon Lab Website (DEMO)
-description: Moon Lab Website at WI.
+title: Test Lab Website (DEMO)
+description: Test Lab Website at WI.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
