--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Test Lab Website (DEMO)
-description: Test Lab Website at WI.
+title: Sun Lab Website
+description: Sun Lab at Whitehead Institute for Biomedical Research
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
