--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sun Lab Website
-description: Sun Lab at Whitehead Institute for Biomedical Research
+description: Sun Lab at the Whitehead Institute for Biomedical Research.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
