--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Sun Lab Website
-description: Sun Lab at the Whitehead Institute for Biomedical Research.
+title: Sun Lab
+description: Unlocking the Secrets of Cellular Communication through Advanced Machine Learning.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
